[package]
name = "best-orm"
version = "0.1.0"
edition = "2021"
authors = ["miky rola <mikyrola8@gmail.com>"]
description = ""

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "postgres"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
sea-query = "0.30"