[package]
name = "best-orm"
version = "0.1.0"
edition = "2021"
authors = ["miky rola <mikyrola8@gmail.com>"]
description = "EvsORM is a lightweight and flexible Object-Relational Mapping (ORM) library for Rust, designed to simplify database interactions with support for PostgreSQL and MySQL"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "postgres"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
sea-query = "0.30"
